[project]
name = "pin-structure-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Louis Pender",email = "louis.pender@bluefruit.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
